Fixed the image syntax

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href="#work">Work</a>
       <a href="#contact">Contact Me</a>
       <!-- Link this to your resume! -->
-      <a href="/Users/maxc/bootcamp/UTSA-VIRT-FSF-PT-01-2024-U-LOLC/Challenges/02-Advanced-CSS/Main/assets/images/ New Resume.pdf">Resume</a>
+      <a href="assets/images/ New Resume.pdf">Resume</a>
     </nav>
   </header>
   
@@ -34,7 +34,7 @@
   
   <section class="hero-banner">
        <div>
-        <img src="/Users/maxc/bootcamp/UTSA-VIRT-FSF-PT-01-2024-U-LOLC/Challenges/02-Advanced-CSS/Main/assets/images/Max.jpeg" alt="Max" width="300" height="300" src="/Users/maxc/bootcamp/UTSA-VIRT-FSF-PT-01-2024-U-LOLC/Challenges/02-Advanced-CSS/Main/assets/images/Max.jpeg" style="position:static; top:20px; left:2px";
+        <img src="assets/images/Max.jpeg" alt="Max" width="300" height="300" style="position:static; top:20px; left:2px;"/>
        </div>
     <div>
       <h2>Level Up with Technology!</h2>
